--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
-
-:root {
-  font-family: "IBM Plex Mono" !important;
-}
-
 body {
   margin: 0;
   /* font-family: "JetBrains Mono" !important; */
@@ -25,3 +18,24 @@ body {
 ul {
   list-style-type: none;
 }
+
+h1 {
+  font-size: 1.5em;
+  color: #50fa7b;
+}
+
+td, th {
+  border-bottom: 0.1em solid white;
+  text-align: center;
+}
+
+table {
+  width: 50%;
+  margin: 0;
+}
+
+th {
+  font-weight: bold;
+  color: #ffb86c;
+}
+
