--- a/src/style.css
+++ b/src/style.css
@@ -1,22 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
 
-:root {
-  background-color: #282a36;
-}
 
 body {
-  margin: 0 0;
-  font-family: "JetBrains Mono" !important;
-  /* font-family: "IBM Plex Mono" !important; */
+  margin: 0;
+  font-family: "JetBrains Mono";
 }
 
-.App {
+.term {
   width: 100%;
   height: 100vh;
 }
 
-.logo {
-  font-family: monospace;
+.header {
   white-space: pre;
 }
 
@@ -40,13 +35,7 @@ table {
 }
 
 th {
-  font-weight: bold;
+  font-weight: 800;
   color: #ffb86c;
-}
-
-@media screen and (max-width: 400px) {
-  body {
-    font-size: 10px;
-  }
 }
 
