--- a/src/style.css
+++ b/src/style.css
@@ -2,12 +2,12 @@
 
 body {
   margin: 0;
-  font-family: "JetBrains Mono";
 }
 
 .term {
   width: 100%;
   height: 100vh;
+  font-family: "JetBrains Mono" !important;
 }
 
 .header {
