--- a/src/style.css
+++ b/src/style.css
@@ -69,6 +69,10 @@ strong {
   color: var(--pink);
 }
 
+code {
+  color: var(--focus)
+}
+
 @media screen and (max-width: 600px) {
   table {
     width: 100%;
