--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,7 @@ th {
 td {
   color: var(--white);
 }
+
 td:hover {
   color: var(--cyan)
 }
@@ -80,7 +81,7 @@ blockquote {
   color: var(--yellow)
 }
 
-.term {
+.app {
   width: 100%;
   height: 100vh;
   font-family: "JetBrains Mono" !important;
