--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,13 @@ a:visited {
 p {
   max-width: 90%;
 }
+h1,
+h2,
+h3 {
+  color: var(--pink);
+  font-family: "JetBrains Mono";
+  padding: 0 3em 0;
+}
 
 a:hover {
   color: var(--orange) !important;
@@ -57,6 +64,7 @@ table {
   margin-left: auto;
   margin-right: auto;
   font-family: "JetBrains Mono" !important;
+  padding: 0 0 3em;
 }
 
 th {
@@ -105,6 +113,10 @@ em {
 @media screen and (max-width: 600px) {
   p {
     font-size: 1em;
+  }
+  h3 {
+    padding: 0 auto;
+    text-align: center;
   }
   table {
     width: 100%;
