--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ body {
 
 a,
 a:visited {
-  color: var(--green) !important;
+  color: var(--green);
 }
 
 p {
@@ -37,7 +37,7 @@ p {
 }
 
 a:hover {
-  color: var(--orange) !important;
+  color: var(--orange);
   text-decoration: none;
 }
 
@@ -47,7 +47,7 @@ ul {
 
 td,
 th {
-  border-bottom: 0.1em solid #44475a;
+  border-bottom: 1px solid #44475a;
   text-align: left;
   padding: 9px 0 1px 5px;
 }
@@ -55,9 +55,8 @@ th {
 table {
   table-layout: fixed;
   width: 100%;
-  margin: 0 auto;
-  font-family: "JetBrains Mono" !important;
-  padding: 0 0 1em;
+  margin: 20px auto;
+  font-family: "JetBrains Mono";
 }
 
 th {
@@ -95,26 +94,23 @@ em {
 .app {
   width: 100%;
   height: 100vh;
-  font-family: "JetBrains Mono" !important;
+  font-family: "JetBrains Mono";
 }
 
 .header {
   white-space: pre;
-  font-family: "JetBrains Mono" !important;
+  font-family: "JetBrains Mono";
 }
 
 @media screen and (max-width: 600px) {
   p {
-    font-size: 1em;
+    font-size: 16px;
   }
   table {
     width: 100%;
-    font-size: 0.8em;
+    font-size: 16px;
   }
-  th {
-    text-align: center;
-    font-size: 1em;
-  }
+  th,
   td {
     text-align: center;
   }
