--- a/src/style.css
+++ b/src/style.css
@@ -29,16 +29,16 @@ body {
 
 a,
 a:visited {
-  color: var(--green);
+  color: var(--green) !important;
+}
+
+a:hover {
+  color: var(--orange) !important;
+  text-decoration: none;
 }
 
 p {
   max-width: 90%;
-}
-
-a:hover {
-  color: var(--orange);
-  text-decoration: none;
 }
 
 ul {
